# research-agent

./: .gitignore  README.md  pyproject.toml
data/skills/: ccf-a-review.skill.md  evidence-extraction.skill.md  feasibility-review.skill.md  literature-search.skill.md  novelty-analysis.skill.md  pdf-acquisition.skill.md  pdf-reading.skill.md  related-work-analysis.skill.md  research-strategy.skill.md
idea2repo/: __init__.py  api.py  cli.py  codex_agent.py  generator.py  github_export.py  interactive.py  literature.py  permissions.py  providers.py  scoring.py  security.py  state.py  workflow.py  workspace.py
src/: api-contract.ts  api.ts  cli.ts  generator.ts  index.ts  literature.ts  state.ts
src/agents/: schemas.ts
src/auth/: codex-oauth.ts
src/pipeline/: research-pipeline.ts  stage-state.ts  stages.ts
src/providers/: adapter.ts  codex-cli.ts  index.ts
src/runtime/: approvals.ts  (+8 more)
test/: analysis.test.ts  api-sse.test.ts  api.test.ts  approvals.test.ts  auth.test.ts  cli.test.ts  codex-cli-adapter.test.ts  core.test.ts  decisions.test.ts  eval-acceptance.test.ts  literature.test.ts  pdf.test.ts  pipeline-events.test.ts  provider-adapter.test.ts  research-pipeline.test.ts  runtime-artifacts.test.ts  runtime-events.test.ts  runtime-ledgers.test.ts  runtime-plan.test.ts  runtime-recovery.test.ts  slash-commands.test.ts  tool-registry.test.ts  tui-history.test.ts  tui-layout.test.ts  tui-runtime-panels.test.ts
tests/: test_api.py  test_cli.py  test_generator.py  test_github_export.py  test_literature.py  test_providers.py  test_security.py  test_workflow.py
(+59 files in other folders)
